add Kaggle projects to portfolio data and update CSS for container responsiveness

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,6 +24,12 @@ body {
     font-weight: 400;
 }
 
+@media (min-width: 1200px) {
+    .container, .container-lg, .container-md, .container-sm, .container-xl{
+        max-width: 1280px;
+    }
+}
+
 /* boxes and containers */
 .boxed {
     margin: 0 auto;
